llm-servers/vllm/gpu/standalone/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
  labels:
    app: vllm-gpu
spec:
  type: ClusterIP
  selector:
    app: vllm-gpu
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
