llm-servers/vllm/gpu/standalone/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm-route
  labels:
    app: vllm-gpu
spec:
  to:
    kind: Service
    name: vllm-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
